--- a/.github/workflows/azure-fn_kevindugan-fn.yml
+++ b/.github/workflows/azure-fn_kevindugan-fn.yml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -35,6 +38,10 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here
+      - name: Testing
+        run: |
+          pip install pytest-cov pytest-mock
+          pytest
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
