--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,9 +5,6 @@
 name: Build and test kevindugan-phd.com
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -68,7 +65,7 @@ jobs:
       - name: Append Staging tag
         shell: bash
         run: |
-          sed -i "s,HTML5 UP</a></li>,&<li>Staging Version ($(git rev-parse --short HEAD))</li>," app/templates/layout.html
+          sed -i "s,HTML5 UP</a></li>,&<li>Staging Version ($(git rev-parse --short ${{ github.event.pull_request.head.sha }}))</li>," app/templates/layout.html
           grep Staging app/templates/layout.html
 
       - name: 'Deploy to Azure Functions'
