--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==2.2.3
-azure-communication-email==1.0.0b1
-azure_functions==1.13.2
+azure-communication-email==1.0.0
+azure-functions==1.13.2
